# ristory

./: .gitignore  Cargo.toml  LICENSE  README.md
shell/: ristory.zsh
src/: app.rs  main.rs  ui.rs
