[package]
name = "ristory"
version = "0.1.1"
edition = "2021"
authors = ["Lan4h <15997426361@sina.cn>"]
description = "A tool for finding history zsh commands."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
crossterm = { version = "0.23", features = [ "serde" ] }